k8s/bar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.name: "bar"
  name: "bar"
spec:
  replicas: 2
  selector:
    matchLabels: 
      app.name: "bar"
  template:
    metadata:
      labels:
        app.name: "bar"
    spec:
      containers:
      - image: hashicorp/http-echo:latest
        imagePullPolicy: IfNotPresent
        name: "bar"
        args:  
        - "-text=Bar"
        ports:
        - containerPort: 5678
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
      
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:  
  name: bar-service
spec:
  selector:    
    app.name: "bar"
  type: ClusterIP
  ports:  
  - name: http
    port: 80
    targetPort: 5678
    protocol: TCP
