k8s/foo_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  echo-foo
  labels:
    app:  foo
spec:
  selector:
    matchLabels:
      app: foo
  replicas: 1
  template:
    metadata:
      labels:
        app:  foo
    spec:
      containers:
      - name:  foo
        image:  hashicorp/http-echo
        args: ['-text="foo"']
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort:  5678
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: echo-foo-svc
spec:
  selector:
    app: foo
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 5678
